{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 581,
  "lineage": "611ff6c9-01fe-f729-53b4-a36bfa12e5cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:security-group/sg-03a4d1429b07f5bb9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a4d1429b07f5bb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20231210154033775400000005",
            "name_prefix": "terraform-",
            "owner_id": "436888476506",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7947205e970d696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:security-group/sg-06ec9a8bcf2811b6a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ec9a8bcf2811b6a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a4d1429b07f5bb9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20231210154035569100000006",
            "name_prefix": "terraform-",
            "owner_id": "436888476506",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7947205e970d696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-0d6a8258c7d81fe73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a8258c7d81fe73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "thesis-cost-general": "lambda",
              "thesis-cost-traffic": "lambda"
            },
            "tags_all": {
              "thesis-cost-general": "lambda",
              "thesis-cost-traffic": "lambda"
            },
            "vpc_id": "vpc-0d7947205e970d696"
          },
          "dependencies": [
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-062b726faff7e25b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062b726faff7e25b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "thesis-cost-general": "lambda",
              "thesis-cost-traffic": "lambda"
            },
            "tags_all": {
              "thesis-cost-general": "lambda",
              "thesis-cost-traffic": "lambda"
            },
            "vpc_id": "vpc-0d7947205e970d696"
          },
          "dependencies": [
            "aws_vpc.lambda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lambda_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:vpc/vpc-0d7947205e970d696",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027e42287f654de61",
            "default_route_table_id": "rtb-0a887e81269179880",
            "default_security_group_id": "sg-01b69b6fc98eae878",
            "dhcp_options_id": "dopt-0e9ce2aa924f30e88",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7947205e970d696",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a887e81269179880",
            "owner_id": "436888476506"
          }
        }
      ]
    }
  ]
}